fixed flicker with help. need to fix buttons, restructure css, add another grid-like display for the photos. learning, son, learning

--- a/css/style.css
+++ b/css/style.css
@@ -1,22 +1,62 @@
+body {
+	background:#0c1835;
+	z-level:-999;
+}
+
+div, span, a {
+	color:#fff;
+}
+
+a {
+	text-decoration: none;
+}
+
+li a:hover,li a.active {
+	font-weight:bold;
+}
+
+.wax-tooltip, .towns, .newport-story, .bandon-story, .beach-story, .flickr {
+	font-family: 'Nixie One',cursive;
+}
+
+.title, .open, #proceed, #flickr-click {
+	font-family: 'Homemade Apple',cursive;
+	
+}
+
+.title, .open, .towns, .newport-story, .bandon-story, .beach-story, .flickr {
+	margin-left:10%;
+}
+
+.newport-story, .bandon-story, .beach-story, .flickr {
+	font-weight:light;
+}
+
+
+#topbar, .towns, a.zoomdisabled, .newport-story, .bandon-story, .beach-story, .flickr {
+	display:none;
+}
+
+a.zoomer, .wax-tooltip, .towns ul li a, #proceed, #flickr-click, .pictures img {
+	border-radius:3px;
+}
+
 #map {
+	position:absolute;
 	width:100%;
 	height:100%;
 	margin:0;
-	position:absolute;
 	z-index:-1;
 }
 
 #topbar {
+	position:absolute;
 	width:100%;
- 	position:absolute;
 	background:rgba(163,129,81,0.7);
-	color:#000;
+	-webkit-box-shadow: 0px 3px 5px rgba(163,129,81,0.7);
+	-moz-box-shadow:    0px 3px 5px rgba(163,129,81,0.7);
+	box-shadow:         0px 3px 5px rgba(163,129,81,0.7);
 	z-index:1;
-	display:none;
-	-moz-transition: height 0.5s ease;
-  	-o-transition: height 0.5s ease;
-  	-webkit-transition: height 0.5s ease;
-  	transition: height 0.5s ease;
 }
 
 a.zoomer {
@@ -24,7 +64,6 @@ a.zoomer {
 	margin-left:25px;
 	background:rgba(255,255,255,0.5);
 	color:#0b1836;
-	border-radius: 3px;
   }
 
   a.zoomin {
@@ -35,215 +74,139 @@ a.zoomer {
     left:35px;
     }
 
-  a.zoomdisabled {
-    display:none;
-    }
-
 .wax-tooltip {
-	background:rgba(11,24,54,0.2);
-	font-family:'Nixie One',cursive;
+	padding:12px;
+	background:rgba(11,24,54,0.4);
 	font-size:16px;
 	color:#0b1936;
-	padding:12px;
 	display:block;
-	border-radius:3px;
-}
-
-.wax-tooltip.z10 {
-	display:none;
-}
-
-
-.pictures img{
-	display:none;
-	border-radius:5px;
-}
-
-.pictures img.appear{
-	display:block;
-	-moz-transition: height 1s ease;
-  	-o-transition: height 1s ease;
-  	-webkit-transition: height 1s ease;
-  	transition: height 1s ease;
 }
 
 .title {
-	margin-top: 28px;
-	margin-left: 58px;
-	font-family: 'Homemade Apple', cursive;
-	font-size:52px;
-}
-
-.title a {
-	text-decoration: none;
-	color:#fff;
-}
-
-.title span{
-	display:inline;
+	padding-top:2%;
+	font-size:44px;
 }
 
 .title span.small {
-	padding:10px;
-	font-size: 36px;
+	padding:12px;
+	font-size: 32px;
 }
-
-.subtitle,.towns, .newport-story, .bandon-story, .beach-story, .intro {
-	font-family: 'Nixie One',cursive;
-}
-
-.subtitle {
-	display:none;
-	float:left;
-	text-align: right;
-	padding-top:12px;
-	padding-left:400px;
-}
-
-.subtitle ul li {
-	width:300px;
-	font-weight:light;
-	color:#fff;
-}
-
-.towns {
-	position:relative;
-	padding-top:4px;
-	padding-left:720px;
-}
-
 
 .towns ul li a {
-  	height:30px;
-  	width:110px;
-  	padding-top:10px;
-  	text-decoration:none;
+	float:left;
+	width:54px;
+	height:35px;
+  	margin-top:12%;
+  	margin-left:6px;
+  	padding-top:15px;
     text-align:center;
   	background: rgba(255,255,255,0.6);
-  	color: #a38151;
-  	float:left;
-  	border-top-left-radius: 5px;
-  	border-top-right-radius: 5px;
+  	-moz-box-shadow:inset 0 0 1px #000;
+	-webkit-box-shadow:inset 0 0 1px #000;
+	box-shadow: inner 0 0 1px #000;
+  	transition:width 0.1s ease-in-out;
+	-moz-transition:width 0.1s ease-in-out; /* Firefox 4 */
+	-webkit-transition:width 0.1s ease-in-out; /* Safari and Chrome */
+	-o-transition:width 0.1s ease-in-out; /* Opera */
 }
 
-#beach {
-	height:28px;
-	width:140px;
-	font-size:13px;
-	padding-top:12px;
-}
-
-.towns ul li.special a {
-	width:180px;
-}
-
-.towns ul li.special a:hover {
-	background: #b1e3d4;
-}
-
-.towns ul li.special a.active {
-	background: #79d1b8;
-}
-
-.towns ul li a:hover {
+.towns ul li a:hover,.towns ul li a.active {
+	width:120px;
+	font-size:16px;
 	background: #f8e578;
-    color: #fff;
-    font-weight: bold;
 }
 
 .towns ul li a.active {
-    background: #ffdb00;
-    color: #fff;
-    font-weight: bold;
+    background: #79d1b8;
 }
 
-.open, .newport-story, .bandon-story, .beach-story, .intro {
-	height:294px;
-	width:300px;
-	padding-top: 16%;
-	margin-left: 10%;
-	font-size: 22px;
-	font-weight:light;
-	color:#fff;
-	float:left;
+.towns ul li a.active.hover {
+    width:54px;
 }
+
 
 .open {
-	padding-top:10%;
-	line-height:80px;
-	width:60%;
-	font-size:44px;
-	font-family:'Homemade Apple', cursive;
-}
-
-.intro {
-	width:400px;
-}
-
-.newport-story, .bandon-story, .beach-story, #c1, #c2, #c3, .intro {
-	display:none;
-}
-
-#intro-click {
 	position:absolute;
-	left:10%;
-	text-decoration: none;
-	margin-top:44px;
-	padding:40px;
-	border-radius:5px;
-	font-family:'Homemade Apple',cursive;
+	line-height:66px;
+	width:50%;
+	margin-top:10%;
 	font-size:32px;
-	background: rgba(255,255,255,0.2);
-	color:#0b1936;
 }
 
-#intro-click:hover{
-	color: #fff;
+#proceed{
+	position:absolute;
+	line-height:44px;
+	margin-top:10%;
+	margin-left:85%;
+	padding:0px 8px 0px 8px;
+	font-size:44px;
+	background: rgba(255,255,255,0.6);
 }
 
-#intro-click.change{
-	bottom:20px;
-	left:90px;
-    font-size:0px;
-    width:25px;
-	height:25px;
-	border-radius:3px;
-	padding:0px;
-	background-image:url(../images/pic-icon.jpg);
-	-moz-transition: width height 2s ease;
-  	-o-transition: width height 2s ease;
-  	-webkit-transition: width height 2s ease;
-  	transition: width height 2s ease;
+#proceed a {
+ 	color:#0b1936;
 }
 
+#proceed a:hover {
+ 	color:#fff !important;
+}
 
-#intro-click.change.again{
-	background-image:url(../images/pic-icon-bw.jpg);
+.newport-story, .bandon-story, .beach-story, .flickr {
+	height:294px;
+	width:336px;
+	padding-top:18%;
+	font-size: 22px;
+	font-weight:light;
+	z-index:1;
 }
 
 #c1, #c2, #c3 {
+	float:left;
 	padding-top:18px;
 	padding-right:26px;
-	float:left;
 	font-family:Zapfino;
 	font-size: 48px;
 }
 
 
-#cont1, #cont2, #cont3, #cont4 {
-	float:right;
-	margin-top:50px;
-	background: rgba(255,255,255,0.2);
-	color:#fff;
-	line-height:28px;
-	padding-left:10px;
-	padding-right:10px;
-	text-decoration: none;
-	text-align:center;
-	border-radius:3px;
-	color:#0b1936;
+#flickr-click {
+	width:266px;
+	margin-top:20%;
+	padding:20px;
+	font-size:22px;
+	text-align:center;	
 }
 
-#cont1:hover, #cont2:hover, #cont3:hover, #cont4:hover {
-    color:#fff;
+#flickr-click:hover{
+	border:1px dashed #fff;
+}
+
+#flickr-click a {
+	color:rgba(255,255,255,0.6);
+}
+
+#flickr-click a:hover {
+	color:#fff;
+}
+
+
+#flickr-click.change{
+    width:25px;
+	height:25px;
+	padding:0px;
+	bottom:20px;
+	left:90px;
+    font-size:0px;
+	background-image:url(../images/pic-icon.jpg); 
+	border:0px;
+}
+
+
+#flickr-click.change.again{
+	background-image:url(../images/pic-icon-bw.jpg);
+	border:0px;
+}
+
+.pictures{
+	z-index:999;
 }
